unpackaged/main/default/objects/Campaign_Eligibility__c/Campaign_Eligibility__c.object-meta.xml
<CustomObject>
    <label>Campaign Eligibility</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Eligibilities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>