unpackaged/main/default/objects/Campaign_Eligibility__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the campaign for which campaign eligibility is created</description>
    <inlineHelpText>Denotes Campaign for which campaign eligibility is created</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Eligibilities</relationshipLabel>
    <relationshipName>Campaign_Eligibilities</relationshipName>
    <type>Lookup</type>
</CustomField>