unpackaged/main/default/objects/Campaign_Eligibility__c/fields/Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Type__c</fullName>
    <description>Denotes the type of entry of criteria</description>
    <inlineHelpText>Denotes the type of entry of criteria</inlineHelpText>
    <label>Criteria Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>Apex Method</fullName>
            </value>
            <value>
                <fullName>Custom Metadata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>