unpackaged/main/default/objects/Campaign_Eligibility__c/fields/Next_run_scheduled__c.field-meta.xml
<CustomField>
    <fullName>Next_run_scheduled__c</fullName>
    <description>Denotes the next time the campaign eligibility is run by Campaign Rule Engine (CRE) for the related campaign</description>
    <inlineHelpText>Denotes the next time the campaign eligibility is run by Campaign Rule Engine (CRE) for the related campaign</inlineHelpText>
    <label>Next Run scheduled</label>
    <type>DateTime</type>
</CustomField>