unpackaged/main/default/objects/Campaign_Eligibility__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Denotes the order in which the campaign eligibility rules are processed by Campaign Rule Engine. This is useful when there are multiple/dependant rules in execution</description>
    <inlineHelpText>Denotes the order in which the campaign eligibility rules are processed by Campaign Rule Engine. This is useful when there are multiple/dependant rules in execution</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>