unpackaged/main/default/objects/Campaign_Eligibility__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <description>If SOQL, fetch only contact ids or lead ids using SOQL select query. For complex criteria, choose ApexMethod (Format : %3CApexClassName%3E:%3CMethodName%3E</description>
    <inlineHelpText>If SOQL, fetch only contact ids or lead ids using SOQL select query. For complex criteria, choose ApexMethod (Format : %3CApexClassName%3E:MethodName%3E</inlineHelpText>
    <label>Rule Name</label>
    <type>TextArea</type>
</CustomField>