unpackaged/main/default/objects/Campaign_Eligibility__c/fields/Rule_Name_Extension__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name_Extension__c</fullName>
    <description>To accommodate longer SOQL queries (&gt;255 char) when Criteria Type is &#39;SOQL&#39;</description>
    <inlineHelpText>To accommodate longer SOQL queries (&gt;255 char) when Criteria Type is &#39;SOQL&#39;</inlineHelpText>
    <label>Rule Name Extension</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>