unpackaged/main/default/objects/Campaign_Eligibility__c/fields/Run_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Run_Frequency__c</fullName>
    <description>Denotes predetermined list of frequencies for this rule to be run by Campaign Rule Engine</description>
    <inlineHelpText>Hourly- 9AM to 9PM
Daily- 6AM
Weekly- Every Monday at 6AM
Monthly- 1st day of the month at 6AM
Not Applicable- Choose this option if rule is not going to be run in a predefined schedule</inlineHelpText>
    <label>Run Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>