unpackaged/main/default/objects/Campaign_Eligibility__c/validationRules/Cannot_change_frequency_of_active_CE.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_frequency_of_active_CE</fullName>
    <active>false</active>
    <errorConditionFormula>Campaign__r.IsActive = true &amp;&amp;
 ISCHANGED(Run_Frequency__c) &amp;&amp;
	NOT(ISBLANK(PRIORVALUE(Run_Frequency__c)))</errorConditionFormula>
    <errorMessage>you cannot change run frequency of active campaign</errorMessage>
</ValidationRule>