unpackaged/main/default/objects/Campaign_Eligibility__c/validationRules/Currency_equal_to_Campaign_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_equal_to_Campaign_Currency</fullName>
    <active>true</active>
    <description>Campaign Eligibility Currency should be equal to Campaign Currency.</description>
    <errorConditionFormula>!(TEXT(CurrencyIsoCode) = TEXT(Campaign__r.CurrencyIsoCode))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency should be equal to Campaign Currency.</errorMessage>
</ValidationRule>