unpackaged/main/default/objects/Campaign_Eligibility__c/validationRules/Lock_CE_of_Past_Campaigns_For_TM_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_CE_of_Past_Campaigns_For_TM_Users</fullName>
    <active>true</active>
    <description>Restrict Trade Marketing users to update CE of past campaign.</description>
    <errorConditionFormula>AND(
!ISBLANK(Campaign__c), 
Campaign__r.Campaign_End_DateTime__c &lt; NOW(),
$Profile.Name = &quot;Trade Marketing&quot; ,
!ISNEW()
)</errorConditionFormula>
    <errorMessage>You cannot perform the operation as related campaign has passed its end date time.</errorMessage>
</ValidationRule>